# mediaforgetool

./: .devmenu.json  .dockerignore  .env.example  .gitignore  Dockerfile  README.fr.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: container.yml
_bmad-output/implementation-artifacts/: 1-1-socle-fastapi-jobs-et-telechargement-media-mvp.md  1-2-durcissement-exploitation-et-parcours-public.md  2-1-healthcheck-docker-compose-leger.md  2-2-image-docker-autonome-et-runbook-minimal.md  2-3-image-docker-sans-donnees-runtime.md  2-4-sauvegarde-et-restauration-du-stockage-local.md  2-5-logs-json-documentes-et-testes.md  2-6-headers-http-de-durcissement-navigateur.md  2-7-limite-de-taille-des-corps-http.md  2-8-correlation-request-id.md  2-9-liste-dhotes-autorises.md  3-1-contrats-publics-de-gestion-des-jobs-et-extraits.md  epic-1-retrospective.md  (+24 more)
app/: main.py  run.py
docs/: architecture.md
requirements/: base.txt  dev.txt
scripts/: dev_server.py  storage_backup.py
tests/: conftest.py  test_cleanup_service.py  test_job_runner.py  test_job_submission.py  test_jobs_api.py  test_logging.py  test_media_downloader.py  test_media_edit.py  test_media_probe.py  test_media_resolution.py  test_plain_text_importer.py  test_playlist_domain.py  test_playlist_queue.py  test_playlist_schema.py  test_playlists_api.py  test_provider_registries.py  test_request_id.py  test_request_limits.py  test_security_headers.py  test_shazam_csv_importer.py  test_storage_backup.py  test_studio_domain.py  test_trusted_hosts.py  test_url_guard.py  test_youtube_search_provider.py
(+47 files in other folders)
